Finalizing all the routes for swagger
